# paddleOCR_cpp_tensorrt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Convert.h  args.h  cls.h  det.h  ocr.h  postprocess_op.h  preprocess_op.h  rec.h  utility.h
myModels/: det.onnx  en_rec_v2.onnx
src/: Convert.cpp  args.cpp  cls.cpp  det.cpp  ocr.cpp  postprocess_op.cpp  preprocess_op.cpp  rec.cpp  utility.cpp
